Fix z-index issue

--- a/src/styles.less
+++ b/src/styles.less
@@ -67,3 +67,7 @@
   .medium { max-width: 50%; }
   .large { max-width: 100%; }
 }
+
+.block.align {
+  z-index: auto!important;
+}
